# rac-delta-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: lib.rs
src/core/: mod.rs
src/core/adapters/: mod.rs  storage_adapter.rs
src/core/config/: mod.rs  rac_delta_config.rs
src/core/models/: chunk.rs  delta_plan.rs  file_entry.rs  mod.rs  rd_index.rs
src/core/pipelines/: download_pipeline.rs  mod.rs  upload_pipeline.rs
src/core/services/: delta_service.rs  hasher_service.rs  mod.rs  reconstruction_service.rs  validation_service.rs
src/infrastructure/: client.rs  mod.rs
src/infrastructure/adapters/: azure_blob_storage_adapter.rs  gcs_storage_adapter.rs  http_storage_adapter.rs  local_storage_adapter.rs  mod.rs  s3_storage_adapter.rs  ssh_storage_adapter.rs  url_storage_adapter.rs
src/infrastructure/chunk_sources/: disk_chunk_source.rs  memory_chunk_source.rs  mod.rs  storage_chunk_source.rs
src/infrastructure/factories/: mod.rs  pipeline_factory.rs  service_factory.rs  storage_adapter_factory.rs
src/infrastructure/pipelines/: default_hash_download_pipeline.rs  default_hash_upload_pipeline.rs  default_url_download_pipeline.rs  default_url_upload_pipeline.rs  mod.rs
src/infrastructure/services/: blake3_hasher_service.rs  memory_delta_service.rs  memory_reconstruction_service.rs  memory_validation_service.rs  mod.rs
