[package]
name = "rac-delta"
version = "1.0.0"
edition = "2024"
authors = ["Rubén Cruz <ruben.cruz.fuentes@gmail.com>"]
description = "rac-delta protocol for delta-patching implementation in Rust"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "2.0.17"
blake3 = "1.5"
regex = "1.11"
async-stream = "0.3.6"
serde_json = "1.0"
tokio-util = { version = "0.7.17", features = ["io", "compat"] }

aws-sdk-s3 = { version = "1.115.0", optional = true }
azure_storage_blob = { version = "0.7.0", optional = true }
azure_core = { version = "0.30.1", optional = true }
google-cloud-auth = { version = "1.2.0", optional = true }
bytes = {version = "1.11.0", optional = true }
google-cloud-storage = { version = "1.4.0", features = ["unstable-stream"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], optional = true }
urlencoding = { version = "2.1", optional = true }
async-ssh2-lite = { version = "0.5", features = ["tokio"], optional = true }

[features]
default = []
s3 = ["aws-sdk-s3"]
azure = ["azure_storage_blob", "azure_core"]
gcs = ["google-cloud-storage", "google-cloud-auth", "bytes"]
http = ["reqwest", "urlencoding"]
url = ["reqwest"]
ssh = ["async-ssh2-lite"]